# realstateos

./: .env  .env.example  .gitignore  .ralphrc  LICENSE  Makefile  NEXT_SESSION.md  README.md  README_DEPLOY_RAILWAY.md  docker-compose.yml  railway.toml
apps/api/: .dockerignore  Dockerfile  Dockerfile.worker  README_DEPLOY.md  alembic.ini  cloudrun.yaml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260314_0002_enterprise_tables.py  20260314_0003_fulltext_search.py  20260314_0004_soft_delete.py  20260314_0005_webhook_endpoints.py
apps/api/app/: config.py  db.py  errors.py  main.py  openapi.py  versioning.py
apps/api/app/agents/: document_agent.py  financial_agent.py  notification_agent.py  retrieval_agent.py
apps/api/app/api/: __init__.py  auth 3.py  auth.py  deps.py  router.py
apps/api/app/cache/: redis_cache.py
apps/api/app/core/: rbac.py  security.py  tenant.py
apps/api/app/graphql/: __init__.py  context.py  dataloaders.py  queries.py  schema.py  subscriptions.py  types.py
apps/api/app/integrations/: bank_mock.py  email.py  email_ingestion.py  esign.py  google_calendar.py  indices.py  itau.py  ocr.py  receita.py  storage.py  viacep.py  whatsapp.py
apps/api/app/middleware/: __init__.py  audit.py  rate_limiter.py  security_headers.py  tenant.py
apps/api/app/ml/: __init__.py  anomaly_detector.py  default_predictor.py
apps/api/app/models/: __init__.py  agent_task.py  audit_log.py  charge.py  contract.py  dlq_item.py  document.py  economic_index.py  mixins.py  owner.py  property.py  renter.py  scheduled_job.py  task.py  tenant.py  user.py  webhook.py
apps/api/app/repositories/: agent_tasks.py  audit_log.py  contracts.py  property_repo.py  soft_delete.py
apps/api/app/routes/: agent_tasks.py  analytics.py  bulk.py  charges.py  contracts.py  demo.py  documents.py  exports.py  health.py  metrics.py  nl_query.py  owners.py  properties.py  renters.py  router.py  (+4 more)
apps/api/migrations/: env.py
apps/api/scripts/: backup.py  check_migrations.py  run-migrations.sh  seed.py  seed_demo_data.py  start-api.sh  start-worker-service.sh  start-worker.sh
apps/api/tests/: conftest.py  test_billing_properties.py
(+433 files in other folders)
